--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run build:css && next build",
+    "build:css": "tailwindcss -i ./styles/globals.css -o ./styles/tailwind-output.css",
     "start": "next start",
     "lint": "next lint"
   },
@@ -13,20 +14,23 @@
     "google-auth-library": "^9.15.1",
     "google-spreadsheet": "^4.1.4",
     "leaflet": "^1.9.4",
-    "next": "15.2.1",
+    "next": "14.1.0",
     "pmtiles": "^4.3.0",
     "protomaps": "^2.0.1",
     "protomaps-leaflet": "^4.1.1",
     "protomaps-themes-base": "^4.5.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-leaflet": "^5.0.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-leaflet": "4.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.0.0",
-    "eslint-config-next": "15.2.1",
-    "postcss": "^8.5.3",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8.4.35",
     "tailwindcss": "^3.4.17"
+  },
+  "engines": {
+    "node": "18"
   }
 }
