--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npm run build:css && next build",
-    "build:css": "tailwindcss -i ./styles/globals.css -o ./styles/tailwind-output.css",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -28,6 +27,8 @@
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.35",
+    "postcss-import": "^16.1.0",
+    "postcss-nested": "^7.0.2",
     "tailwindcss": "^3.4.17"
   },
   "engines": {
