--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "facilitaire-dashboard",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "download-logos": "node scripts/downloadLogos.js"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
@@ -14,6 +16,7 @@
     "google-spreadsheet": "^4.1.4",
     "leaflet": "^1.9.4",
     "next": "14.1.0",
+    "node-fetch": "^3.3.2",
     "pmtiles": "^4.3.0",
     "protomaps": "^2.0.1",
     "protomaps-leaflet": "^4.1.1",
