--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.18.1",
     "google-auth-library": "^9.15.1",
     "google-spreadsheet": "^4.1.4",
     "leaflet": "^1.9.4",
@@ -28,6 +29,8 @@
     "react-leaflet": "4.2.1"
   },
   "devDependencies": {
+    "@types/node": "24.0.3",
+    "@types/react": "19.1.8",
     "autoprefixer": "^10.4.21",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
