fix(vercel): enable deployments for staging branch

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
   "version": 2,
+  "git": {
+    "deploymentEnabled": {
+      "staging": true,
+      "main": true
+    }
+  },
   "builds": [
     {
       "src": "package.json",
@@ -18,10 +24,5 @@
   ],
   "env": {
     "NODE_ENV": "production"
-  },
-  "functions": {
-    "api/**/*.js": {
-      "maxDuration": 30
-    }
   }
 } 
