--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,8 @@
     "react-leaflet": "4.2.1"
   },
   "devDependencies": {
+    "@types/node": "^24.0.3",
+    "@types/react": "^19.1.8",
     "autoprefixer": "^10.4.21",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
