--- a/.github/workflows/branch-protection.yml
+++ b/.github/workflows/branch-protection.yml
@@ -45,6 +45,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
         
+      - name: Generate Prisma Client
+        run: npx prisma generate --schema=../backend/prisma/schema.prisma
+        
       - name: Run tests
         run: npm test || echo "⚠️ Geen tests gevonden - voeg tests toe voor betere kwaliteit"
         
