--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "download-logos": "node scripts/downloadLogos.js"
+    "postinstall": "npx prisma generate --schema=../backend/prisma/schema.prisma"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@vercel/analytics": "^1.5.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.18.1",
