--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,8 @@
     "react-hook-form": "^7.57.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "react-leaflet": "4.2.1"
+    "react-leaflet": "4.2.1",
+    "resend": "^4.6.0"
   },
   "devDependencies": {
     "@types/node": "^24.0.3",
