Fix dependencies and update authentication system - Add missing postcss-import and postcss-nested dependencies - Add resend dependency for email functionality - Update Prisma schema and generated files - Improve authentication context and API routes

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,7 +16,15 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "target": "ES2017"
+    "target": "ES2017",
+    "baseUrl": ".",
+    "paths": {
+      "@/components/*": ["components/*"],
+      "@/lib/*": ["lib/*"],
+      "@/styles/*": ["styles/*"],
+      "@/contexts/*": ["contexts/*"],
+      "@prisma/client": ["../backend/generated/prisma"]
+    }
   },
   "include": [
     "next-env.d.ts",
