--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "npx prisma generate --schema=../backend/prisma/schema.prisma"
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -29,20 +29,26 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-leaflet": "4.2.1",
-    "resend": "^4.6.0"
+    "resend": "^4.6.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   },
   "devDependencies": {
-    "@types/node": "^24.0.3",
-    "@types/react": "^19.1.8",
+    "@types/node": "18.19.41",
+    "@types/react": "18.3.4",
     "autoprefixer": "^10.4.21",
-    "eslint": "8.56.0",
+    "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8.4.35",
-    "postcss-import": "^16.1.0",
+    "postcss": "^8",
+    "postcss-import": "^16.1.1",
     "postcss-nested": "^7.0.2",
-    "tailwindcss": "^3.4.17"
+    "prisma": "^5.17.0",
+    "tailwindcss": "3.4.4"
   },
   "engines": {
     "node": "18"
+  },
+  "prisma": {
+    "schema": "../backend/prisma/schema.prisma"
   }
 }
